--- a/Chap-CalDependent.Rnw
+++ b/Chap-CalDependent.Rnw
@@ -307,7 +307,7 @@ In practice, $\sigma_0^2$ and $\bm{V}$ are usually unknown and need to be estima
 \begin{equation}
 \label{eqn:cal-lmm-inversion}
   %\mc{J}_\mathrm{cal}(x) = \left\{ x: \mc{Q}^2 \le z_{1-\alpha/2}^2 \right\},
-  \mc{J}_\mathrm{cal}(x) = \left\{ x: z_{\alpha/2} < \mc{Q} \le z_{1-\alpha/2} \right\},
+  \mc{J}_\mathrm{cal}(x) = \left\{ x: z_{\alpha/2} < \mc{Q} < z_{1-\alpha/2} \right\},
 \end{equation}
 where $z_{\alpha/2} = z_{1-\alpha/2}$ denote the $\alpha/2$ and $1 - \alpha/2$ quantiles of a standard normal distribution, respectively. Similar to the approximate predictive pivot (Equation~\eqref{eqn:approximate-predictive-pivot}), it is unlikely that Equation~\eqref{eqn:cal-lmm-inversion} will yield closed-form solutions, thus, the solution must be obtained numerically. For the simulated data example, a 95\% inversion interval based on Equation~\eqref{eqn:cal-lmm-inversion}, corresponding to $y_0 = 0.75$, is given by $(\Sexpr{invest(simdata.lme, y0 = 0.75)["lower"]}, \Sexpr{invest(simdata.lme, y0 = 0.75)["upper"]})$, which is very similar to the Wald-based intervals obtained earlier.
 
@@ -377,7 +377,7 @@ As a result, we obtain the $R$ bootstrap values $\mc{Q}_r^\boot$. Let $\gamma_{\
 \begin{equation}
 \label{eqn:cal-lmm-inversion-boot}
   %\mc{J}_\mathrm{cal}(x) = \left\{ x: \mc{Q}^2 \le z_{1-\alpha/2}^2 \right\},
-  \mc{J}_\mathrm{cal}^\boot(x) = \left\{ x: \gamma_{\alpha/2}^\boot \le \mc{Q} \le \gamma_{1-\alpha/2}^\boot \right\}.
+  \mc{J}_\mathrm{cal}^\boot(x) = \left\{ x: \gamma_{\alpha/2}^\boot < \mc{Q} < \gamma_{1-\alpha/2}^\boot \right\}.
 \end{equation}
 We illustrate this on the bladder volume example in Section~\ref{sec:bladder-example}. A similar adjustment can also be made for the Wald-based interval as well; this is very similar to the studentized bootstrap procedure outlined in steps (6)-(7) of Algorithm~\ref{alg:boot_cal}.
 
@@ -394,6 +394,10 @@ $\left[\wh{\mu}(x_0) + e_{\alpha/2}, \wh{\mu}(x_0) + e_{1-\alpha/2}\right]$, whe
   \left[ \frac{\left(y_0 - e_{1-\alpha/2}\right) - \wh{\beta}_0}{\wh{\beta}_1}, \frac{\left(y_0 - e_{\alpha/2}\right) - \wh{\beta}_0}{\wh{\beta}_1} \right].
 \end{equation}
 Using Equation~\eqref{eqn:simdata-x0-df}, a 95\% distribution-free calibration interval for the simulated random intercept example is $(0.6121, 0.9852)$. However, since these data are normal (we know because we generated the data), the intervals given in Table~\ref{tab:simdata-intervals} are probably more accurate. 
+
+\section{Simulation study}
+\label{sec:simulation-study}
+We performed a limited simulation study to compare the confidence interval procedures discussed in Sections~\ref{sec:calibration-lmm-wald}-\ref{sec:calibration-lmm-parboot}. Due to limited computational resources and the computing time needed for bootstrap resampling and fitting mixed-effects models, the Monte Carlo sample size chosen to be $N = 1,000$. We used a confidence level of $95\%$, and therefore the standard deviation of the coverage probability estimates is approximately $\sqrt{0.95\left(1-0.95\right)/1000} = 0.007$; thus, we only report two decimal places of precision in Tables~?-?.
 
 \section{Bladder volume example}
 \label{sec:bladder-example}
