--- a/Chap-Nonparametric.Rnw
+++ b/Chap-Nonparametric.Rnw
@@ -2,9 +2,9 @@
 
 \chapter{Semiparametric Calibration}
 \label{chap:nonparametric}
-So far, we have considered calibration curves in which the mean response $\mu(x) = \E\left\{\mc{Y} | x\right\}$ has a known form that depends on a small number of unknown parameters $\bm{\beta}$. Finding a good parametric model, however, can be time consuming and require a great deal of expertise. Therefore, it is sometimes useful to assess the effects of the explanatory variable $x$ without completely specifying the structural form of $\mu(x)$. In this chapter, we propose a simple and fast \textit{semiparametric} approach to computing calibration curves. By semiparametric, we mean that only part of the model is specified. Our treatment of semiparametric calibration curves follows the work of \citet{brumback_comment_1999}, \citet{ruppert_selecting_2002}, and \citet{ruppert_semiparametric_2003}, and \citet{crainiceanu_bayesian_2005}. Nonparametric calibration has also been discussed in the literature by, for example, \citet{clark_calibration_1979}, \citet{clark_calibration_1980}, and \citet{rosen_constructing_1995}. Our approach to calibration here is similar to that of \citet{clark_calibration_1980} in that we are "inverting" bias-corrected prediction intervals. However, the \ac{LMM} representation of \ac{P-spline}s \citep{ruppert_semiparametric_2003} we use here yields a rather simple method for correcting this bias. Rosen and Cohen used a nonparametric bootstrap to obtain calibration intervals from a cubic smoothing spline. Their approach, however, made no attempt to correct for bias in the smoothed calibration curve.
+So far, we have considered calibration curves in which the mean response $\mu(x) = \E\left\{\mc{Y} | x\right\}$ has a known form that depends on a small number of unknown parameters $\bm{\beta}$. Finding a good parametric model, however, can be time consuming and require a great deal of expertise. Therefore, it is sometimes useful to assess the effects of the explanatory variable $x$ without completely specifying the structural form of $\mu(x)$. In this chapter, we propose a simple and fast \textit{semiparametric} approach to computing calibration curves. By semiparametric, we mean that only part of the model is specified. Our treatment of semiparametric calibration curves follows the work of \citet{brumback_comment_1999}, \citet{ruppert_selecting_2002}, and \citet{ruppert_semiparametric_2003}, and \citet{crainiceanu_bayesian_2005}. Nonparametric calibration has also been discussed in the literature by, for example, \citet{clark_calibration_1979}, \citet{clark_calibration_1980}, and \citet{rosen_constructing_1995}. Our approach to calibration here is similar to that of \citet{clark_calibration_1980} in that we are "inverting" bias-adjusted prediction intervals. However, the \ac{LMM} representation of \ac{P-spline}s \citep{ruppert_semiparametric_2003} we use here yields a rather simple method for correcting this bias. Rosen and Cohen used a nonparametric bootstrap to obtain calibration intervals from a cubic smoothing spline. Their approach, however, made no attempt to correct for bias in the smoothed calibration curve.
 
-In Section~\ref{sec:pspline-lmm}, we discuss the linear mixed-effects model representation of \ac{P-spline}s. Section~\ref{sec:adjusted-calibration}, proposes a method for obtaining bias-corrected calibration intervals based on the mixed model representation. A small Monte Carlo study demonstrates that the these intervals have coverage probability close to the nominal $1-\alpha$ level. A Bayesian analog of this procedure is proposed in Section~\ref{sec:pspline-bayesian}. Section~\ref{sec:semipar-discussion} concludes this chapter with a discussion on ideas for future research.
+In Section~\ref{sec:pspline-lmm}, we discuss the linear mixed-effects model representation of \ac{P-spline}s. Section~\ref{sec:adjusted-calibration}, proposes a method for obtaining bias-adjusted calibration intervals based on the mixed model representation. A small Monte Carlo study demonstrates that the these intervals have coverage probability close to the nominal $1-\alpha$ level. A Bayesian analog of this procedure is proposed in Section~\ref{sec:pspline-bayesian}. Section~\ref{sec:semipar-discussion} concludes this chapter with a discussion on ideas for future research.
 
 \section{Mixed model representation of P-splines}
 \label{sec:pspline-lmm}
@@ -53,7 +53,7 @@ where $\wh{\sigma}_\epsilon^2$ and $\wh{\sigma}_\alpha^2$ are the \ac{REML} esti
 
 As described in \citet{robinson_that_1991}, the \ac{LMM} has a simple Bayesian analog. For the mixed model representation, Equation~\eqref{eqn:pspline-lmm}, if $\bm{\beta}$, $\sigma_\epsilon^2$, and $\sigma_\alpha^2$ are all given improper uniform priors, then the posterior of $\bm{\mu}$ is $\mc{N}\left( \wh{\bm{\mu}}, \sigma_\epsilon^2 \bm{S} \right)$. Note the use of the variance-covariance matrix $\sigma_\epsilon^2\bm{S}$ rather than the variance-covariance matrix $\sigma_\epsilon^2\bm{S}\bm{S}'$ from Equation~\eqref{eqn:cov}. It is easy to see that $\left[\bm{S}\right]_{ij} \ge \left[\bm{S}\bm{S}'\right]_{ij}$, hence, confidence and prediction intervals based on the Bayesian variance-covariance matrix $\sigma_\epsilon^2\bm{S}$ are wider than those based on $\sigma_\epsilon^2\bm{S}\bm{S}'$. As pointed out by \citet{hastie_gams_1990}, the "extra wideness" is due to the fact that $\bm{S}$ accounts for squared bias whereas $\bm{S}\bm{S}'$ does not.
 
-\section{Bias-corrected calibration intervals}
+\section{Bias-adjusted calibration intervals}
 \label{sec:adjusted-calibration}
 As mentioned in Section~\ref{sec:pspline-inference}, the estimated mean response $\wh{\mu}(x)$ is biased. Inference for \ac{P-spline}s based on the \ac{LMM} representation, Equation~\eqref{eqn:pspline-lmm}, differs depending on whether we take the randomness of $\bm{\alpha}$ into account. Ignoring the randomness in $\bm{\alpha}$ leads to the same intervals given in Section~\ref{sec:pspline-inference}. We can account for bias in the confidence and prediction intervals, however, by conditioning on the random effects $\bm{\alpha}$. To see this, note that the bias vector of $\wt{\bm{\mu}}$, conditional on $\bm{\alpha}$, is 
 \begin{equation}
@@ -68,14 +68,14 @@ From the properties of conditional expectation \citep[pg. 164]{casella_statistic
 \end{equation*}
 Thus, $\wt{\bm{\mu}}$ is unbiased for $\bm{\mu}$ when averaged over the distribution of $\bm{\alpha}$. This is equivalent to the Bayesian approach where (pointwise) confidence and prediction bands use diagonal entries of $\bm{S}$ in place of the diagonal entries of $\bm{S}\bm{S}'$ described in Section~\ref{sec:pspline-inference}.
 
-Let $\bm{\Omega}_0 = \left(1, x_0, \dotsc, x_0^p, (x_0 - \xi_1)_+^p, \dotsc, (x_0 - \xi_K)_+^p\right)'$ where $x_0$ is an arbitrary value of the explanatory variable $x$. A $100(1 - \alpha)\%$ (bias-corrected) confidence interval for $\mu(x_0)$ is given by
+Let $\bm{\Omega}_0 = \left(1, x_0, \dotsc, x_0^p, (x_0 - \xi_1)_+^p, \dotsc, (x_0 - \xi_K)_+^p\right)'$ where $x_0$ is an arbitrary value of the explanatory variable $x$. A $100(1 - \alpha)\%$ (bias-adjusted) confidence interval for $\mu(x_0)$ is given by
 \begin{equation*}
-  \wh{\mu}(x_0) \pm t_{df}^{1 - \alpha/2} \times \wh{\sigma}_\epsilon\sqrt{\bm{\Omega}_0\left(\bm{\Omega}\bm{\Omega}' + \frac{\wh{\sigma}_\epsilon^2}{\wh{\sigma}_\alpha^2}\bm{D} \right)^{-1}\bm{\Omega}_0'},
+  \wh{\mu}(x_0) \pm t_{1-\alpha/2}^{df} \times \wh{\sigma}_\epsilon\sqrt{\bm{\Omega}_0\left(\bm{\Omega}\bm{\Omega}' + \frac{\wh{\sigma}_\epsilon^2}{\wh{\sigma}_\alpha^2}\bm{D} \right)^{-1}\bm{\Omega}_0'},
 \end{equation*}
-where $df = n - 2\tr\left(\bm{S}\right) + \tr\left(\bm{S}\bm{S}'\right)$. In a similar manner, a $100(1 - \alpha)\%$ (bias-corrected) prediction interval for a new observation, $\mc{Y} = \mu(x_0) + \epsilon_0$ (independent of current ones), is given as
+where $df = n - 2\tr\left(\bm{S}\right) + \tr\left(\bm{S}\bm{S}'\right)$. In a similar manner, a $100(1 - \alpha)\%$ (bias-adjusted) prediction interval for a new observation, $\mc{Y} = \mu(x_0) + \epsilon_0$ (independent of current ones), is given as
 \begin{equation}
-\label{eqn:bias-corrected-pi}
-  \wh{\mu}(x_0) \pm t_{df}^{1 - \alpha/2} \times \wh{\sigma}_\epsilon\sqrt{1 + \bm{\Omega}_0\left(\bm{\Omega}\bm{\Omega}' + \frac{\wh{\sigma}_\epsilon^2}{\wh{\sigma}_\alpha^2}\bm{D} \right)^{-1}\bm{\Omega}_0'}.
+\label{eqn:bias-adjusted-pi}
+  \wh{\mu}(x_0) \pm t_{1-\alpha/2}^{df} \times \wh{\sigma}_\epsilon\sqrt{1 + \bm{\Omega}_0\left(\bm{\Omega}\bm{\Omega}' + \frac{\wh{\sigma}_\epsilon^2}{\wh{\sigma}_\alpha^2}\bm{D} \right)^{-1}\bm{\Omega}_0'}.
 \end{equation}
 
 Recall the intuition behind the inversion interval. Let $I_\mathrm{pred}(x)$ be a $100(1 - \alpha)\%$ prediction interval for the future observation $\mc{Y}_0$, such that $\Pr\left\{ \mc{Y}_0 \in I_\mathrm{pred}(x) | x_0 = x \right\} = 1 - \alpha$. Then, a confidence interval for $x_0$ corresponding to an observed $\mc{Y}_0$ is just the set $J_\mathrm{cal}(x) = \left\{x : \mc{Y}_0 \in I_\mathrm{pred}(x)\right\}$ since, by construction, 
@@ -83,13 +83,17 @@ Recall the intuition behind the inversion interval. Let $I_\mathrm{pred}(x)$ be 
 \Pr\left\{x_0 \in J_\mathrm{cal}(\mc{Y}_0)\right\} = \Pr\left\{\mc{Y}_0 \in I_\mathrm{pred}(x) | x_0 = x\right\} = 1 - \alpha,
 \end{equation*}
 \citep{clark_calibration_1980}. In other words, a $100(1 - \alpha)\%$ confidence interval for $x_0$ can be obtained by inverting the a corresponding prediction interval for $\mc{Y}_0$. However, we need to make sure to "invert" an appropriate prediction interval (i.e., one that corrects for bias), otherwise, the resulting interval for $x_0$ will likely not be reliable. This suggests the following (bias-adjusted) $100(1-\alpha)\%$ calibration interval for the unknown $x_0$:
+% \begin{equation}
+% \label{eqn:bc-inversion-interval}
+%   \mc{J}_\mathrm{cal}^{\mathrm{ba}}(x_0) = \left\{x_0: \frac{\left[y_0 - \wh{\mu}(x_0)\right]^2}{\wh{\sigma}_\epsilon^2\left[1 + \bm{\Omega}_0\left(\bm{\Omega}'\bm{\Omega} + \frac{\wh{\sigma}_\epsilon^2}{\wh{\sigma}_\alpha^2}\bm{D}\right)^{-1}\bm{\Omega}_0'\right]} < \mc{F}_{1, df}^{1-\alpha}\right\},
+% \end{equation}
 \begin{equation}
 \label{eqn:bc-inversion-interval}
-  \mc{J}_\mathrm{cal}^{BA}(x_0) = \left\{x_0: \frac{y_0 - \wh{\mu}(x_0)}{\wh{\sigma}_\epsilon^2\left[1 + \bm{\Omega}_0\left(\bm{\Omega}'\bm{\Omega} + \frac{\wh{\sigma}_\epsilon^2}{\wh{\sigma}_\alpha^2}\bm{D}\right)^{-1}\bm{\Omega}_0'\right]} < \mc{F}_{1, df}^{1-\alpha}\right\},
+  \mc{J}_\mathrm{cal}^{\mathrm{ba}}(x_0) = \left\{x_0: t_{\alpha/2}^{df} < \frac{y_0 - \wh{\mu}(x_0)}{\sqrt{\wh{\sigma}_\epsilon^2\left[1 + \bm{\Omega}_0\left(\bm{\Omega}'\bm{\Omega} + \frac{\wh{\sigma}_\epsilon^2}{\wh{\sigma}_\alpha^2}\bm{D}\right)^{-1}\bm{\Omega}_0'\right]}} < t_{1-\alpha/2}^{df}\right\},
 \end{equation}
-where $\mc{F}_{1, df}^{1-\alpha} = \left(t_{df}^{1 - \alpha/2}\right)^2$. As before, great care should be taken to ensure that $\mc{J}_\mathrm{cal}^{BA}(x_0)$ is an interval. This may not be the case, for example, when $\mu(x)$ in not monotonic over the range of interest. Also, as with nonlinear calibration, no closed-form expression exists for $\mc{J}_\mathrm{cal}^{BA}(x)$, thus, iterative techniques are required. In a similar fashion, a $100(1-\alpha)\%$ bias-corrected regulation interval for $x_0$ is obtained by inverting a corresponding bias-corrected confidence interval for the mean response:
+As before, great care should be taken to ensure that $\mc{J}_\mathrm{cal}^{\mathrm{ba}}(x_0)$ is an interval. This may not be the case, for example, when $\mu(x)$ in not monotonic over the range of interest. Also, as with nonlinear calibration, no closed-form expression exists for $\mc{J}_\mathrm{cal}^{\mathrm{ba}}(x)$, thus, iterative techniques are required. In a similar fashion, a $100(1-\alpha)\%$ bias-adjusted regulation interval for $x_0$ is obtained by inverting a corresponding bias-adjusted confidence interval for the mean response:
 \begin{equation*}
-  \mc{J}_\mathrm{cal}^{BA}(x_0) = \left\{x_0: \frac{y_0 - \wh{\mu}(x_0)}{\wh{\sigma}_\epsilon^2\bm{\Omega}_0\left(\bm{\Omega}'\bm{\Omega} + \frac{\wh{\sigma}_\epsilon^2}{\wh{\sigma}_\alpha^2}\bm{D}\right)^{-1}\bm{\Omega}_0'} < \mc{F}_{1, df}^{1-\alpha}\right\}.
+  \mc{J}_\mathrm{reg}^{\mathrm{ba}}(x_0) = \left\{x_0: t_{\alpha/2}^{df} < \frac{y_0 - \wh{\mu}(x_0)}{\sqrt{\wh{\sigma}_\epsilon^2\bm{\Omega}_0\left(\bm{\Omega}'\bm{\Omega} + \frac{\wh{\sigma}_\epsilon^2}{\wh{\sigma}_\alpha^2}\bm{D}\right)^{-1}\bm{\Omega}_0'}} < t_{1-\alpha/2}^{df}\right\}.
 \end{equation*}
 
 We designed a small Monte Carlo study to investigate the coverage probability of this technique. The results of this study are presented in Tables~\ref{tab:pspline-monte-carlo-1}-\ref{tab:pspline-monte-carlo-2}. The true calibration function is the sine wave $\mu(x) = \sin(\pi x - \pi/2)/2 + 1/2$ plotted in Figure~\ref{fig:sine-wave}. For data following such a pattern it would be tempting to fit a nonlinear model, perhaps modeling $\mu(x)$ as a \textit{logistic} function. Inference based on the resulting fit would then be inaccurate since, for example, the true calibration curve does not have any asymptotes. For situations like this, it would be useful to have a semiparametric alternative for which to compare inference.
@@ -105,7 +109,7 @@ arrows(x0, f(x0), parusr[1], f(x0))
 
 Notice that the sine wave plotted in Figure~\ref{fig:sine-wave} is scaled to lie in $[0, 1] \times [0, 1]$ with a period of 2. For each of 1,000 simulations, we used $10$, $30$, and $50$ uniformly spaced designed points on the domain $[0, 1]$ with $1$, $2$, and $3$ independent replicates of the response at each design point. The errors were generated as i.i.d. $\mc{N}(0, 0.05^2)$ random variates and the true unknown was chosen to be $x_0 = \Sexpr{x0}$ (hence, $\mu_0 \approx \Sexpr{round(f(x0), 4)}$).
 
-Tables~\ref{tab:pspline-monte-carlo-1}-\ref{tab:pspline-monte-carlo-2} display the estimated coverage probability for this technique applied to the sine wave experiment for both calibration (Table~\ref{tab:pspline-monte-carlo-1}) and regulation (Table~\ref{tab:pspline-monte-carlo-2}). For comparison, we also transformed the data to an equivalent linear model and applied Fieller's method (which yields an exact $95\%$ confidence interval for $x_0$). Clearly, our bias-corrected intervals performed well for quadratic (degree = 2) and cubic (degree = 3) \ac{P-spline}s with increasing sample size without sacrificing interval length. Notice, however, that the calibration results are somewhat conservative (i.e., the coverage probability is slightly larger than $0.95$) while the regulation intervals tend to hit the target coverage $1-\alpha = 0.95$. The reason for this is that the bias in predicting a future observation is the same as that for estimating the mean response, but the former has larger variance. Therefore, the bias accounts for a smaller portion of the mean-squared error in prediction (i.e., the bias gets "washed out" by a larger variance). Thus, for larger samples (perhaps $n \ge 20$ with $m \ge 1$ replicates at each design point), calibration intervals could be computed with or without adjusting for bias. Regulation intervals, on the other hand, should always be adjusted for bias.
+Tables~\ref{tab:pspline-monte-carlo-1}-\ref{tab:pspline-monte-carlo-2} display the estimated coverage probability for this technique applied to the sine wave experiment for both calibration (Table~\ref{tab:pspline-monte-carlo-1}) and regulation (Table~\ref{tab:pspline-monte-carlo-2}). For comparison, we also transformed the data to an equivalent linear model and applied Fieller's method (which yields an exact $95\%$ confidence interval for $x_0$). Clearly, our bias-adjusted intervals performed well for quadratic (degree = 2) and cubic (degree = 3) \ac{P-spline}s with increasing sample size without sacrificing interval length. Notice, however, that the calibration results are somewhat conservative (i.e., the coverage probability is slightly larger than $0.95$) while the regulation intervals tend to hit the target coverage $1-\alpha = 0.95$. The reason for this is that the bias in predicting a future observation is the same as that for estimating the mean response, but the former has larger variance. Therefore, the bias accounts for a smaller portion of the mean-squared error in prediction (i.e., the bias gets "washed out" by a larger variance). Thus, for larger samples (perhaps $n \ge 20$ with $m \ge 1$ replicates at each design point), calibration intervals could be computed with or without adjusting for bias. Regulation intervals, on the other hand, should always be adjusted for bias.
 
 <<sim1-sim2, echo = FALSE>>=
 load("/home/w108bmg/Desktop/Dissertation/Data/sim1.RData")
@@ -118,11 +122,35 @@ sim3 <- apply(sim3[, 1:2], 2, formatC, format = "f", digits = 2)
 sim4 <- apply(sim4[, 1:2], 2, formatC, format = "f", digits = 2)
 @
 
+% \begin{table}[H]%[!htb]
+% \centering
+%   \begin{tabular}{llcccccccc}
+%   \toprule
+%   \phantom{abc} & \phantom{abc} & \multicolumn{2}{c}{P-spline $\left(p=1\right)$} & \multicolumn{2}{c}{P-spline $\left(p=2\right)$} & \multicolumn{2}{c}{P-spline $\left(p=3\right)$} & \multicolumn{2}{c}{Fieller} \\
+%   \cline{3-10}
+%   $n$ & $m$ & CP & Length & CP & Length & CP & Length & CP & Length \\
+%   \hline
+%   10  &  1  & \Sexpr{sim1[1,1]} & \Sexpr{sim1[1,2]} & \Sexpr{sim1[10,1]} & \Sexpr{sim1[10,2]} & \Sexpr{sim1[19,1]} & \Sexpr{sim1[19, 2]} & \Sexpr{sim2[1, 1]} & \Sexpr{sim2[1, 2]} \\
+%   10  &  2  & \Sexpr{sim1[2,1]} & \Sexpr{sim1[2,2]} & \Sexpr{sim1[11,1]} & \Sexpr{sim1[11,2]} & \Sexpr{sim1[20,1]} & \Sexpr{sim1[20, 2]} & \Sexpr{sim2[2, 1]} & \Sexpr{sim2[2, 2]} \\
+%   10  &  3  & \Sexpr{sim1[3,1]} & \Sexpr{sim1[3,2]} & \Sexpr{sim1[12,1]} & \Sexpr{sim1[12,2]} & \Sexpr{sim1[21,1]} & \Sexpr{sim1[21, 2]} & \Sexpr{sim2[3, 1]} & \Sexpr{sim2[3, 2]} \\
+%   \hline
+%   30  &  1  & \Sexpr{sim1[4,1]} & \Sexpr{sim1[4,2]} & \Sexpr{sim1[13,1]} & \Sexpr{sim1[13,2]} & \Sexpr{sim1[22,1]} & \Sexpr{sim1[22, 2]} & \Sexpr{sim2[4, 1]} & \Sexpr{sim2[4, 2]} \\
+%   30  &  2  & \Sexpr{sim1[5,1]} & \Sexpr{sim1[5,2]} & \Sexpr{sim1[14,1]} & \Sexpr{sim1[14,2]} & \Sexpr{sim1[23,1]} & \Sexpr{sim1[23, 2]} & \Sexpr{sim2[5, 1]} & \Sexpr{sim2[5, 2]} \\
+%   30  &  3  & \Sexpr{sim1[6,1]} & \Sexpr{sim1[6,2]} & \Sexpr{sim1[15,1]} & \Sexpr{sim1[15,2]} & \Sexpr{sim1[24,1]} & \Sexpr{sim1[24, 2]} & \Sexpr{sim2[6, 1]} & \Sexpr{sim2[6, 2]} \\
+%   \hline
+%   50  &  1  & \Sexpr{sim1[7,1]} & \Sexpr{sim1[7,2]} & \Sexpr{sim1[16,1]} & \Sexpr{sim1[16,2]} & \Sexpr{sim1[25,1]} & \Sexpr{sim1[25, 2]} & \Sexpr{sim2[7, 1]} & \Sexpr{sim2[7, 2]} \\
+%   50  &  2  & \Sexpr{sim1[8,1]} & \Sexpr{sim1[8,2]} & \Sexpr{sim1[17,1]} & \Sexpr{sim1[17,2]} & \Sexpr{sim1[26,1]} & \Sexpr{sim1[26, 2]} & \Sexpr{sim2[8, 1]} & \Sexpr{sim2[8, 2]} \\
+%   50  &  3  & \Sexpr{sim1[9,1]} & \Sexpr{sim1[9,2]} & \Sexpr{sim1[18,1]} & \Sexpr{sim1[18,2]} & \Sexpr{sim1[27,1]} & \Sexpr{sim1[27, 2]} & \Sexpr{sim2[9, 1]} & \Sexpr{sim2[9, 2]} \\
+%   \bottomrule
+%   \end{tabular}
+% \caption[Semiparametric calibration Monte Carlo simulation]{Coverage and length of $95\%$ calibration intervals for data from the sine wave experiment with $\sigma_\epsilon = 0.05$. \label{tab:pspline-monte-carlo-1}}
+% \end{table}
+
 \begin{table}[H]%[!htb]
 \centering
   \begin{tabular}{llcccccccc}
   \toprule
-  \phantom{abc} & \phantom{abc} & \multicolumn{2}{c}{Degree = 1} & \multicolumn{2}{c}{Degree = 2} & \multicolumn{2}{c}{Degree = 3} & \multicolumn{2}{c}{Fieller} \\
+  \phantom{abc} & \phantom{abc} & \multicolumn{2}{c}{P-spline $\left(p=1\right)$} & \multicolumn{2}{c}{P-spline $\left(p=2\right)$} & \multicolumn{2}{c}{P-spline $\left(p=3\right)$} & \multicolumn{2}{c}{Fieller} \\
   \cline{3-10}
   $n$ & $m$ & CP & Length & CP & Length & CP & Length & CP & Length \\
   \hline
@@ -168,7 +196,7 @@ sim4 <- apply(sim4[, 1:2], 2, formatC, format = "f", digits = 2)
 
 \subsection{Whiskey age example}
 \label{sec:whiskey}
-The point of this example is to demonstrate how our bias-corrected semiparametric approach to calibration compares against a simpler parametric model (when one is available). To this end, we analyze the whiskey data from \citet{schoeneman_analytical_1971} presented in Figure~\ref{fig:whiskey-scatter}. The data give the proof (measured as twice the percentage of alcohol by volume, denoted 2ABV) of whiskey stored in a charred oak barrel against time in years; clearly, some curvature is present. Suppose a new sample is obtained from the same barrel and that the proof is observed to be $y_0 = 108 \text{ 2ABV}$. It is desired to estimate how long this batch has been aged.
+The point of this example is to demonstrate how our bias-adjusted semiparametric approach to calibration compares against a simpler parametric model (when one is available). To this end, we analyze the whiskey data from \citet{schoeneman_analytical_1971} presented in Figure~\ref{fig:whiskey-scatter}. The data give the proof (measured as twice the percentage of alcohol by volume, denoted 2ABV) of whiskey stored in a charred oak barrel against time in years; clearly, some curvature is present. Suppose a new sample is obtained from the same barrel and that the proof is observed to be $y_0 = 108 \text{ 2ABV}$. It is desired to estimate how long this batch has been aged.
 
 <<whiskey-scatter, echo = FALSE, opts.label = 'fig.7by4', par = TRUE, fig.pos = 'H', fig.scap = 'Scatterplot of the whiskey data', fig.cap = 'Scatterplot of the whiskey data.'>>=
 whiskey <- data.frame(
@@ -187,9 +215,9 @@ We begin by fitting a simple quadratic \ac{P-spline} with five knots:
 \begin{equation*}
   \mu(\text{\texttt{age}}_i) = \beta_0 + \beta_1\text{\texttt{age}}_i + \beta_2\text{\texttt{proof}}_i^2 + \sum_{k = 1}^5\alpha_k\left( \text{\texttt{proof}}_i - \xi_k \right)_+^2.
 \end{equation*}
-The number of knots and their placement were determined automatically using the methods described in Section~\ref{sec:penalized-regression-splines}. The fitted model is depicted in the right-hand side of Figure~\ref{fig:whiskey-calibration}. It appears from the scatterplot that a simple quadratic may be sufficient (i.e., $\alpha_i = 0$, $i = 1, \dotsc, 5$); this fit is depicted in the left side of Figure~\ref{fig:whiskey-calibration}. Both models are different, but the fits are indistinguishable to the human eye. In fact, both models produce identical calibration intervals for $x_0$ (when rounded to four decimal places). For the linear model, we have $\wh{x}_0 = \Sexpr{cal1$estimate}$ years with a 95\% confidence interval for $x_0$ of $(\Sexpr{cal1$lower}, \Sexpr{cal1$upper})$. Similarly, for the \ac{P-spline} model, we have $\wh{x}_0 = \Sexpr{cal2["estimate"]}$ years with a 95\% (bias-corrected) confidence interval for $x_0$ of $(\Sexpr{cal2["lower"]}, \Sexpr{cal2["upper"]})$. The reason we get the same answer from both models is that the polynomial basis part of the penalized spline model is sufficient for modeling the curvature of $\mu(\texttt{age})$, therefore, the spline basis terms are effectively "zeroed out" (see Figure~\ref{fig:whiskey-paths}). Although our \ac{P-spline} approach to obtaining calibration intervals requires large samples, in this small sample example they happen to coincide with the (classical) inversion limits from the quadratic linear model. If we did not correct for bias in the \ac{P-spline} model, however, the confidence interval obtained for $x_0$ would be $(4.7223, 5.7016)$, which is too narrow.
+The number of knots and their placement were determined automatically using the methods described in Section~\ref{sec:penalized-regression-splines}. The fitted model is depicted in the right-hand side of Figure~\ref{fig:whiskey-calibration}. It appears from the scatterplot that a simple quadratic may be sufficient (i.e., $\alpha_i = 0$, $i = 1, \dotsc, 5$); this fit is depicted in the left side of Figure~\ref{fig:whiskey-calibration}. Both models are different, but the fits are indistinguishable to the human eye. In fact, both models produce identical calibration intervals for $x_0$ (when rounded to four decimal places). For the linear model, we have $\wh{x}_0 = \Sexpr{cal1$estimate}$ years with a 95\% confidence interval for $x_0$ of $(\Sexpr{cal1$lower}, \Sexpr{cal1$upper})$. Similarly, for the \ac{P-spline} model, we have $\wh{x}_0 = \Sexpr{cal2["estimate"]}$ years with a 95\% (bias-adjusted) confidence interval for $x_0$ of $(\Sexpr{cal2["lower"]}, \Sexpr{cal2["upper"]})$. The reason we get the same answer from both models is that the polynomial basis part of the penalized spline model is sufficient for modeling the curvature of $\mu(\texttt{age})$, therefore, the spline basis terms are effectively "zeroed out" (see Figure~\ref{fig:whiskey-paths}). Although our \ac{P-spline} approach to obtaining calibration intervals requires large samples, in this small sample example they happen to coincide with the (classical) inversion limits from the quadratic linear model. If we did not correct for bias in the \ac{P-spline} model, however, the confidence interval obtained for $x_0$ would be $(4.7223, 5.7016)$, which is too narrow.
 
-<<whiskey-calibration, echo = FALSE, opts.label = 'fig.7by5', par = TRUE, fig.pos = 'H', fig.scap = 'Fitted  models for the whiskey data', fig.cap = 'Fitted  models for the whiskey data. \\textit{Left}: Quadratic linear model with 95\\% (pointwise) prediction band. \\textit{Right}: Quadratic \\ac{P-spline} with five knots and 95\\% (pointwise) bias-corrected prediction band.'>>=
+<<whiskey-calibration, echo = FALSE, opts.label = 'fig.7by5', par = TRUE, fig.pos = 'H', fig.scap = 'Fitted  models for the whiskey data', fig.cap = 'Fitted  models for the whiskey data. \\textit{Left}: Quadratic linear model with 95\\% (pointwise) prediction band. \\textit{Right}: Quadratic \\ac{P-spline} with five knots and 95\\% (pointwise) bias-adjusted prediction band.'>>=
 par(mfrow = c(1, 2))
 plotFit(mod1, xlab = "Age (years)", ylab = "Proof", pch = 19, 
         lwd.fit = 2, interval = "prediction", shade = T, col.pred = "skyblue")
@@ -312,11 +340,11 @@ segments(cal1$upper, -5, cal1$upper, 20, lwd = 1)
 segments(cal1$estimate, -5, cal1$estimate, 20, lwd = 1)
 @
 
-Figure~\ref{fig:elisa-jags} shows a fitted semiparametric calibration curve, a quadratic \ac{P-spline} with five interior knots. Also shown is the posterior mean based on a fully Bayesian \ac{P-spline} model. Seeing as how the concentration should not be negative, we used a $\mc{U}[0, 50]$ prior for $x_0$, though, lognormal or gamma priors may also be reasonable. The frequentist estimate of $x_0$ is obtained by (numerically) inverting the fitted \ac{P-spline}: $\wh{x}_0 = 9.345$. A (bias-corrected) inversion interval for $x_0$ based on Equation~\eqref{eqn:bc-inversion-interval} is $(7.462, 11.711)$. As previously mentioned, this interval does not account for the variability of the estimated smoothing parameter $\wh{\sigma}_\epsilon^2/\wh{\sigma}_\alpha^2$, hence, we expect the Bayesian credible interval to be slightly wider. The estimator we use for the Bayesian model is the posterior mode of $x_0$ which is equal to $9.285$. There are a number of ways to compute a 95\% credible interval from a given posterior; for example, \textit{highest posterior density} (HPD) intervals. Here we simply report the 0.025 and 0.975 quantiles of the posterior which are $7.250$ and $11.776$, respectively. As noted earlier, these limits are slightly wider than the corresponding frequentist limits, but this extra wideness is likely due to the added uncertainty of the estimated smoothing parameter. \citet{ori_constructing_1995} also obtained calibration intervals for these data. Their approach involved bootstrapping a cross-validated cubic smoothing spline, but did not account for bias in $\wh{\mu}(x)$. For a brief discussion on bias correction for nonparametric regression using the bootstrap see \citet[pp. 362-366]{davison_bootstrap_1997}.
+Figure~\ref{fig:elisa-jags} shows a fitted semiparametric calibration curve, a quadratic \ac{P-spline} with five interior knots. Also shown is the posterior mean based on a fully Bayesian \ac{P-spline} model. Seeing as how the concentration should not be negative, we used a $\mc{U}[0, 50]$ prior for $x_0$, though, lognormal or gamma priors may also be reasonable. The frequentist estimate of $x_0$ is obtained by (numerically) inverting the fitted \ac{P-spline}: $\wh{x}_0 = 9.345$. A (bias-adjusted) inversion interval for $x_0$ based on Equation~\eqref{eqn:bc-inversion-interval} is $(7.462, 11.711)$. As previously mentioned, this interval does not account for the variability of the estimated smoothing parameter $\wh{\sigma}_\epsilon^2/\wh{\sigma}_\alpha^2$, hence, we expect the Bayesian credible interval to be slightly wider. The estimator we use for the Bayesian model is the posterior mode of $x_0$ which is equal to $9.285$. There are a number of ways to compute a 95\% credible interval from a given posterior; for example, \textit{highest posterior density} (HPD) intervals. Here we simply report the 0.025 and 0.975 quantiles of the posterior which are $7.250$ and $11.776$, respectively. As noted earlier, these limits are slightly wider than the corresponding frequentist limits, but this extra wideness is likely due to the added uncertainty of the estimated smoothing parameter. \citet{ori_constructing_1995} also obtained calibration intervals for these data. Their approach involved bootstrapping a cross-validated cubic smoothing spline, but did not account for bias in $\wh{\mu}(x)$. For a brief discussion on bias correction for nonparametric regression using the bootstrap see \citet[pp. 362-366]{davison_bootstrap_1997}.
 
-<<elisa-jags, echo = FALSE, opts.label = 'fig.7by4', par = TRUE, fig.pos = 'H', fig.scap = 'Bayesian nonparametric calibration for ELISA data', fig.cap = 'Nonparametric calibration for ELISA data. \\textit{Left}: Bayesian \\ac{P-spline} with posterior and 95\\% credible interval for $x_0$. The shaded blue region represents the (pointwise) prediction band and the density curve represents the posterior of $x_0$. \\textit{Right}: Mixed-effects model \\ac{P-spline} with bias-corrected 95\\% calibration interval for $x_0$. The shaded blue region represents the (pointwise) bias-corrected predction band.', message = FALSE>>=
+<<elisa-jags, echo = FALSE, opts.label = 'fig.7by4', par = TRUE, fig.pos = 'H', fig.scap = 'Bayesian nonparametric calibration for ELISA data', fig.cap = 'Nonparametric calibration for ELISA data. \\textit{Left}: Bayesian \\ac{P-spline} with posterior and 95\\% credible interval for $x_0$. The shaded blue region represents the (pointwise) prediction band and the density curve represents the posterior of $x_0$. \\textit{Right}: Mixed-effects model \\ac{P-spline} with bias-adjusted 95\\% calibration interval for $x_0$. The shaded blue region represents the (pointwise) bias-adjusted predction band.', message = FALSE>>=
 
-## P-spline model and bias-corrected (inversion) calibration intervals
+## P-spline model and bias-adjusted (inversion) calibration intervals
 mod2 <- with(elisa, pspline(conc, resp, degree = 2))
 cal2 <- invest(mod2, y0 = 20)
 
@@ -363,7 +391,7 @@ segments(cal2[3], 20, cal2[3], -5, col = "purple", lwd = 1)
   \textbf{Method} & \textbf{Estimate} & \textbf{95\% interval} \\
   \midrule
   Parametric (homoscedastic errors)   & $9.184$ & $(7.356, 11.657)$ \\
-  \ac{P-spline} (bias-corrected)            & $9.345$ & $(7.462, 11.711)$ \\
+  \ac{P-spline} (bias-adjusted)            & $9.345$ & $(7.462, 11.711)$ \\
   \ac{P-spline} (Bayesian)                 & $9.285$ & $(7.250, 11.776)$ \\
   \bottomrule
 \end{tabular}
@@ -372,13 +400,13 @@ segments(cal2[3], 20, cal2[3], -5, col = "purple", lwd = 1)
 
 \section{Discussion}
 \label{sec:semipar-discussion}
-We have proposed a new method for calibration in a semiparametric setting based on the mixed model approach to smoothing that corrects for bias in the smoothed calibration curve. While the idea of using \ac{LMM}s for penalized smoothing is not new (see, for example, \citet[pp. 13 - 17]{demidenko_mixed_2013}), this approach has never been adapted for the calibration problem as we have proposed here. By using a simple Monte Carlo experiment, we have demonstrated that bias-corrected prediction intervals can be used to (numerically) obtain calibration intervals for the unknown $x_0$ that have good coverage probabilities. We have discussed a situation where this bias-correction is more serious (i.e., regulation, or rather, calibration where the unknown $x_0$ corresponds to some specified mean response $\mu_0$). Finally, we developed a Bayesian framework for semiparametric calibration by extending the approach originally put forth by \citet{hoadley_bayesian_1970} for linear calibration (see Section~\ref{sec:bayesian}). The frequentist framework, while fast and simple, has the same disadvantage inherent in \ac{LMM} inference; that is, the variance of the estimated smoothing parameter (which is a function of the estimated variance components) is ignored. The Bayesian approach handles this by incorporating prior information for all unknown parameters in the model, leading to slightly wider calibration intervals. The Bayesian approach we presented, however, is slower and more difficult to implement in practice.
+We have proposed a new method for calibration in a semiparametric setting based on the mixed model approach to smoothing that corrects for bias in the smoothed calibration curve. While the idea of using \ac{LMM}s for penalized smoothing is not new (see, for example, \citet[pp. 13 - 17]{demidenko_mixed_2013}), this approach has never been adapted for the calibration problem as we have proposed here. By using a simple Monte Carlo experiment, we have demonstrated that bias-adjusted prediction intervals can be used to (numerically) obtain calibration intervals for the unknown $x_0$ that have good coverage probabilities. We have discussed a situation where this bias-correction is more serious (i.e., regulation, or rather, calibration where the unknown $x_0$ corresponds to some specified mean response $\mu_0$). Finally, we developed a Bayesian framework for semiparametric calibration by extending the approach originally put forth by \citet{hoadley_bayesian_1970} for linear calibration (see Section~\ref{sec:bayesian}). The frequentist framework, while fast and simple, has the same disadvantage inherent in \ac{LMM} inference; that is, the variance of the estimated smoothing parameter (which is a function of the estimated variance components) is ignored. The Bayesian approach handles this by incorporating prior information for all unknown parameters in the model, leading to slightly wider calibration intervals. The Bayesian approach we presented, however, is slower and more difficult to implement in practice.
 
 \subsection{Priors}
 Although we used a uniform prior for $x_0$ in our examples, such a prior for $x$ is unlikely to be useful in general and we recommend a more careful elicitation of prior information. A sensitivity analysis should also be carried out to see if the results are sensitive to the choice of prior for $x_0$. Although inverse gamma priors are commonly used in practice as noninformative priors for scale parameters in hierarchical models (e.g., the variance components in a \ac{LMM}), \citet{gelman_prior_2006} argued against their use. Instead, Gelman adovcated the use of conditionally conjugate priors from a new folded-noncentral-$t$ family.
 
 \subsection{Future work}
-The methods proposed in this chapter open the door to plenty of future research opportunities. Perhaps, the most interesting (and logical) next step would be the inclusion of constraints. For example, we have assumed that the calibration curve is monotonic over the range of interest. Fortunately, this is not usually a concern when the data are collected from a carefully designed experiment. The semiparametric fit, however, is not necessarily monotonic for every value of the smoothing parameter which may cause problems when, say, obtaining a bias-corrected calibration interval. It is possible, however, to incorporate constraints, such as monotonicity, using the general projection method described in \citet{mammen_general_2001}. Until such a constraint can be smoothly incorporated (no pun intended) into our semiparametric approach to calibration, we can instead rely on inference regarding the first derivative of $f$ as described in \citet[pp. 151-156]{ruppert_semiparametric_2003}. For instance, if we assume that $f$ is monotonically increasing (decreasing) over the interval $[a, b]$, then a plot of the estimated first derivative of the regression function should lie completely above (below) the $x$-axis. This derivative function can be estimated in exactly the same way as the regression function itself, that is, using \ac{P-spline}s. Therefore, a thorough calibration analysis might include a plot of the data with fitted mean response, supplemented by a plot of the estimated first derivative function (possibly with a confidence band). For instance, we might supplement our analysis of the ELISA data with the following graphic:
+The methods proposed in this chapter open the door to plenty of future research opportunities. Perhaps, the most interesting (and logical) next step would be the inclusion of constraints. For example, we have assumed that the calibration curve is monotonic over the range of interest. Fortunately, this is not usually a concern when the data are collected from a carefully designed experiment. The semiparametric fit, however, is not necessarily monotonic for every value of the smoothing parameter which may cause problems when, say, obtaining a bias-adjusted calibration interval. It is possible, however, to incorporate constraints, such as monotonicity, using the general projection method described in \citet{mammen_general_2001}. Until such a constraint can be smoothly incorporated (no pun intended) into our semiparametric approach to calibration, we can instead rely on inference regarding the first derivative of $f$ as described in \citet[pp. 151-156]{ruppert_semiparametric_2003}. For instance, if we assume that $f$ is monotonically increasing (decreasing) over the interval $[a, b]$, then a plot of the estimated first derivative of the regression function should lie completely above (below) the $x$-axis. This derivative function can be estimated in exactly the same way as the regression function itself, that is, using \ac{P-spline}s. Therefore, a thorough calibration analysis might include a plot of the data with fitted mean response, supplemented by a plot of the estimated first derivative function (possibly with a confidence band). For instance, we might supplement our analysis of the ELISA data with the following graphic:
 
 <<derivative-plot, echo=FALSE, fig.width=5, fig.height=4, par=TRUE, fig.pos='H', fig.scap='First derivative plot for the ELISA example', fig.cap='Estimate of the first derivative of the regression function for the ELISA example with a 95\\% global confidence band. A horizontal reference line is displayed at zero on the $y$-axis. This plot was produced using the \\code{R} package \\pkg{SemiPar}.', error=FALSE, message=FALSE, warning=FALSE>>=
 library(SemiPar)
